added help header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="computer">
-        <div id="screen">$&gt;<input></input><br><p id='output'></p></div>
+        <div id="screen">Use the 'help' command if you are lost!<br>$&gt;<input></input><br><p id='output'></p></div>
     </div>
 </body>
 
